network-policies/allow-ingress-only-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web # Applies to pods labeled as "web"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend # Only allows traffic from pods labeled "backend"
      ports:
        - protocol: TCP
          port: 80
