network-policies/restrict-ingress-allow-only-one.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: networkpolicytest
spec:
  podSelector: 
    matchLabels:
      run: nginx-test
  policyTypes:
    - Ingress
    - Egress 
  ingress: 
    - from: 
        - ipBlock: 
            cidr: 10.1.2.43/32 
      ports: 
        - protocol: TCP
          port: 80
    - from: 
        - ipBlock: 
            cidr: 10.1.2.47/32
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dns-tool
      ports: 
        - protocol: TCP
          port: 80
  egress: []
